--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
 <body>
   <%-include('partials/header') -%>
   <main>
-    <p>CONTENT</p>
+    <p>Pleas log in</p>
   </main>
-  <%-include('partials/footer') -%>
+  <%-include('partials/footer') -%>F
 </body>
