--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -11,6 +12,113 @@ body {
   min-height: 100vh;
 }
 
-header, footer{
-    padding: 40px;
+header,
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
+  height: 100px;
+  width: 100%;
+  gap: 1rem;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  min-height: calc(100% - (100px * 2));
+  width: 1000px;
+  gap: 1rem;
+}
+
+section#top {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+
+  .names {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+section#content {
+  width: 100%;
+
+  .folders {
+    padding: 1rem;
+    width: 100%;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 160px);
+    grid-template-rows: repeat(auto-fit, 50px);
+    place-items: center;
+    justify-content: start;
+    align-items: start;
+    gap: 1rem;
+
+    .folder {
+      padding: 0.5rem;
+      display: flex;
+      width: 160px;
+      height: 50px;
+      justify-content: center;
+      align-items: center;
+      background-color: rgb(230, 230, 230);
+      border-radius: 0.2rem;
+      pointer-events: all;
+    }
+  }
+
+  .files {
+    padding: 1rem;
+    width: 100%;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 160px);
+    grid-template-rows: repeat(auto-fit, 200px);
+    place-items: center;
+    justify-content: start;
+    align-items: start;
+    gap: 1rem;
+
+    .file {
+      padding: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      width: 160px;
+      height: 200px;
+      background-color: rgb(230, 230, 230);
+      border-radius: 0.2rem;
+      gap: 0.5rem;
+      p {
+        width: 120px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        text-wrap: nowrap;
+      }
+      img {
+        width: 150px;
+        height: 150px;
+        object-fit: cover;
+      }
+    }
+  }
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  width: 200px;
+  input {
+    width: 100%;
+  }
 }
